Ajout du lien du projet bibliothèque dans index.html et changement de cv.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <li>React</li><li>Flask</li><li>PostgreSQL</li><li>Docker</li><li>Tests (Pytest)</li>
     </ul>
     <div class="boutonsprojet">
-      <button class="deuxboutons" onclick="window.open('LIEN_BIBLIO', '_blank');">
+      <button class="deuxboutons" onclick="window.open('https://github.com/Egua123/projet_bibliotheque_numerique', '_blank');">
         <span class="boutontextprojet">voir sur</span>
         <span class="boutoniconprojet"><i class="fa-brands fa-github"></i></span>
       </button>
